# competition

./: .gitignore  CMakeLists.txt
CMakeProject4/: CMakeLists.txt  CMakeProject4.cpp  CMakeProject4.h
lib/: CMakeLists.txt
